# softwareudvikling2

./: CMakeLists.txt  Database.cpp  Database.h  Dungeon.cpp  Dungeon.h  Enemy.cpp  Enemy.h  Hero.cpp  Hero.h  HeroManager.cpp  HeroManager.h  README.md  Weapon.cpp  Weapon.h  game.db  heroes.db  main.cpp
